--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,3 +35,5 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_SUBSCRIBER }
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_SUBSCRIBER, ROLE_ALLOWED_TO_SWITCH]
